Add rescoreContext for neuralsparse query's two-phase speed up.
Signed-off-by: conggguan <congguan@amazon.com>